SUBDIRS = acc fixmd2 glbsp glvis makeinfo vcc vlumpy
EXTRA_DIST = \
	editing/acs/strfhelp.acs \
	editing/acs/stspec.acs \
	editing/acs/vcommon.acs \
	editing/acs/vdefs.acs \
	editing/acs/vspecial.acs \
	editing/acs/vwvars.acs \
	editing/dbuilder/Vavoom_Doom.cfg \
	editing/dbuilder/Vavoom_Doom2.cfg \
	editing/dbuilder/Vavoom_Heretic.cfg \
	editing/dbuilder/Vavoom_Hexen.cfg \
	editing/dbuilder/Vavoom_Strife.cfg \
	editing/wauthor/vdoom.wcf \
	editing/wauthor/vdoom2.wcf \
	editing/wauthor/vheretic.wcf \
	editing/wauthor/vhexen.wcf \
	editing/wauthor/vstrife.wcf \
	vlaunch/main.cpp \
	vlaunch/main.dfm \
	vlaunch/main.h \
	vlaunch/vlaunch.bpr \
	vlaunch/vlaunch.cpp \
	vlaunch/vlaunch.dsk \
	vlaunch/vlaunch.res \
	ddf2vc/action.c \
	ddf2vc/ddf2vc.c \
	ddf2vc/ddf2vc.mak \
	ddf2vc/ddf2vc.txt \
	ddf2vc/ddf_anim.c \
	ddf2vc/ddf_atk.c \
	ddf2vc/ddf_boom.c \
	ddf2vc/ddf_colm.c \
	ddf2vc/ddf_game.c \
	ddf2vc/ddf_lang.c \
	ddf2vc/ddf_levl.c \
	ddf2vc/ddf_line.c \
	ddf2vc/ddf_locl.h \
	ddf2vc/ddf_main.c \
	ddf2vc/ddf_main.h \
	ddf2vc/ddf_mobj.c \
	ddf2vc/ddf_mus.c \
	ddf2vc/ddf_sect.c \
	ddf2vc/ddf_sfx.c \
	ddf2vc/ddf_stat.c \
	ddf2vc/ddf_swth.c \
	ddf2vc/ddf_weap.c \
	ddf2vc/djgpp/i_compen.h \
	ddf2vc/dm_data.h \
	ddf2vc/dm_defs.h \
	ddf2vc/dm_state.h \
	ddf2vc/dm_type.h \
	ddf2vc/dstrings.h \
	ddf2vc/e_event.h \
	ddf2vc/e_net.h \
	ddf2vc/e_player.h \
	ddf2vc/e_search.h \
	ddf2vc/e_think.h \
	ddf2vc/e_ticcmd.h \
	ddf2vc/i_defs.h \
	ddf2vc/i_system.h \
	ddf2vc/lu_math.h \
	ddf2vc/m_argv.c \
	ddf2vc/m_argv.h \
	ddf2vc/m_crc32.c \
	ddf2vc/m_fixed.h \
	ddf2vc/m_inline.h \
	ddf2vc/m_math.h \
	ddf2vc/m_misc.h \
	ddf2vc/m_random.h \
	ddf2vc/p_action.h \
	ddf2vc/p_local.h \
	ddf2vc/p_mobj.h \
	ddf2vc/p_spec.h \
	ddf2vc/p_weapon.h \
	ddf2vc/r_bsp.h \
	ddf2vc/r_data.h \
	ddf2vc/r_defs.h \
	ddf2vc/r_local.h \
	ddf2vc/r_main.h \
	ddf2vc/r_plane.h \
	ddf2vc/r_segs.h \
	ddf2vc/r_state.h \
	ddf2vc/r_things.h \
	ddf2vc/scripts.c \
	ddf2vc/s_sound.h \
	ddf2vc/vc.h \
	ddf2vc/vc_mobj.c \
	ddf2vc/vc_weapn.c \
	ddf2vc/v_res.h \
	ddf2vc/v_screen.h \
	ddf2vc/v_video1.h \
	ddf2vc/w_image.h \
	ddf2vc/win32/i_compen.h \
	ddf2vc/w_textur.h \
	ddf2vc/w_wad.h \
	ddf2vc/z_zone.c \
	ddf2vc/z_zone.h
